// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [pk]
  email_address varchar(100) [not null, unique]
  hashed_pw text
  auth_method varchar(50) [not null]
}

Table addresses {
  id integer [pk]
  address varchar(300) [not null]
  postcode varchar(8) [not null]
  indexes {
    (address, postcode) [unique]
  }
}

Table productmetadata {
  parent_asin text [pk]
  title text
  average_rating text
  rating_number text
  features text
  description text
  price text
  store text
  details text
  main_category text
}

Table productimages {
  parent_asin text [ref: > productmetadata.parent_asin]
  thumb text
  hi_res text
  large_res text
}

Table productcategories {
  parent_asin text [ref: > productmetadata.parent_asin]
  categories text
  main_category varchar(255)
}

Table metadata {
  parent_asin text [ref: > productmetadata.parent_asin]
  main_category text
  title text
  average_rating text
  rating_number text
  features text
  description text
  price text
  images text
  videos text
  store text
  categories text
  details text
  bought_together text
  subtitle text
  author text
}

Table user_reviews {
  rating text
  title text
  text text
  images text
  asin text
  parent_asin text [ref: > productmetadata.parent_asin]
  user_id text
  timestamp text
  helpful_vote text
  verified_purchase text
}

Table user_reviews_temp {
  rating text
  title text
  text text
  images text
  asin text
  parent_asin text [ref: > productmetadata.parent_asin]
  user_id text
  timestamp text
  helpful_vote text
  verified_purchase text
}

Table user_sessions {
  sid varchar [pk]
  sess jsonb [not null]
  expire timestamp [not null]
  user_id integer [ref: > users.id]
}

Table cart_products {
  user_id integer [ref: > users.id]
  product_id text [ref: > productmetadata.parent_asin]
  quantity smallint [not null]
  indexes {
    (user_id, product_id) [pk]
  }
}

Table orders {
  id integer [pk]
  user_id integer [ref: > users.id]
  address_id integer [ref: > addresses.id]
  order_placed_time timestamp [not null]
  status varchar(100) [not null]
  total_cost money [not null]
}

Table order_products {
  order_id integer [ref: > orders.id]
  parent_asin text [ref: > productmetadata.parent_asin]
  product_quantity smallint [not null]
  indexes {
    (order_id, parent_asin) [pk]
  }
}
